--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -122,7 +122,7 @@
     </div>
   </div>
 </nav>
-<div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1 mt-3"> <% for(let listing of allListing){%> <a href="/listings/<%=listing._id%>" style="text-decoration:none"> <div class="card listing-card"> <img src="<%=listing.image.url%>" class="card-img-top" alt="Listing Image"> <div class="card-img-overlay"></div> <div class="card-body"> <b><p class="card-text"> <%=listing.title%></b> <br> &#8377; <%=listing.price.toLocaleString("en-IN")%>/night <i> &nbsp; +18% GST</i> </p> </div> </div> </a> <% } %> </div> <!-- <form method="GET" action="listings/new"> <button>Create new Listing</button> </form> -->
+<div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1 mt-3"> <% for(let listing of allListing){%> <a href="/listings/<%=listing._id%>" style="text-decoration:none"> <div class="card listing-card"> <img src="<%=listing.image.url%>" class="card-img-top" alt="Listing Image"> <div class="card-img-overlay"></div> <div class="card-body"> <b><p class="card-text"> <%=listing.title%></b> <br> &#8377; <%=listing.price.toLocaleString("en-IN")%>/night <i class="tax-info"> &nbsp; +18% GST</i> </p> </div> </div> </a> <% } %> </div> <!-- <form method="GET" action="listings/new"> <button>Create new Listing</button> </form> -->
 </body>
 <script>
   let taxSwitch = document.getElementById("switchCheckReverse");
