--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -67,6 +67,9 @@
     width: 1.2rem;
     height: 1.2rem;
   }
+  .tax-info{
+    display: none;
+  }
 
   /* ---------------- MOBILE MENU ---------------- */
   @media (max-width: 1200px) {
