--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -86,6 +86,7 @@
 
   .nav-item i {
     font-size: 1rem; /* slightly larger for clarity */
+    text-align: center;
   }
 
   .nav-item p {
@@ -106,7 +107,6 @@
   }
 
   .form-check-input {
-    transform: scale(1.3); /* make switch larger */
     margin-right: 0.4rem;
   }
 
