--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -95,16 +95,9 @@
   }
 
   /* --- Toggle switch section --- */
-  .toggle-switch {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex: 1 1 100%;
-    margin-top: 0.8rem;
-    font-size: 0.5rem;
-    text-align: center;
-    white-space: nowrap;
-  }
+  .toggle-switch { 
+    margin-left: 0; margin-top: 0.5rem; font-size: 0.65rem;
+   }
 
   .form-check-input {
     margin-right: 0.4rem;
